# scribe-ui

./: .gitignore  Dockerfile  LICENSE  NOTICE  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: docker-image.yml  pytest.yml
db/: analytics.py
docs/: encryption.md
pages/: admin.py  customer.py  health.py  home.py  srt.py  status.py  txt.py  user.py
tests/: conftest.py  test_srt.py  test_storage.py
utils/: caption.py  chat.py  common.py  crypto.py  customer.py  group.py  helpers.py  settings.py  srt.py  storage.py  styles.py  token.py  transcript.py  undo_redo.py  video.py
